--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@mdi/font": "^5.6.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.7",
